--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,21 @@
 spring:
-  thymeleaf:
-    prefix: classpath:/templates/
-    suffix: .html
-
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/JPA_EX1;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        #        show_sql: true
-        format_sql: true
+#  thymeleaf:
+#    prefix: classpath:/templates/
+#    suffix: .html
+#
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/JPA_EX1;
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    properties:
+#      hibernate:
+#        #        show_sql: true
+#        format_sql: true
 
 logging:
   level:
